// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matrix renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(0);
  -ms-transform: matrix(0);
  transform: matrix(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(0);
  -ms-transform: matrix(0);
  transform: matrix(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(0);
  -ms-transform: matrix(0);
  transform: matrix(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(0);
  -ms-transform: matrix(0);
  transform: matrix(0);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(hasnot);
  -ms-transform: matrix(hasnot);
  transform: matrix(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(has);
  -ms-transform: matrix(has);
  transform: matrix(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(hasnot);
  -ms-transform: matrix(hasnot);
  transform: matrix(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(has);
  -ms-transform: matrix(has);
  transform: matrix(has);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(invalid.path.1);
  -ms-transform: matrix(invalid.path.1);
  transform: matrix(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(invalid.path.1);
  -ms-transform: matrix(invalid.path.1);
  transform: matrix(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(invalid.path.1);
  -ms-transform: matrix(invalid.path.1);
  transform: matrix(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(invalid.path.1);
  -ms-transform: matrix(invalid.path.1);
  transform: matrix(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(-54881);
  -ms-transform: matrix(-54881);
  transform: matrix(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(-54881);
  -ms-transform: matrix(-54881);
  transform: matrix(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(-42365);
  -ms-transform: matrix(-42365);
  transform: matrix(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(-42365);
  -ms-transform: matrix(-42365);
  transform: matrix(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(July);
    -ms-transform: matrix(July);
    transform: matrix(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(August);
    -ms-transform: matrix(August);
    transform: matrix(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(September);
    -ms-transform: matrix(September);
    transform: matrix(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix(November);
    -ms-transform: matrix(November);
    transform: matrix(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(July);
    -ms-transform: matrix(July);
    transform: matrix(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(August);
    -ms-transform: matrix(August);
    transform: matrix(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(September);
    -ms-transform: matrix(September);
    transform: matrix(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix(November);
    -ms-transform: matrix(November);
    transform: matrix(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(May);
    -ms-transform: matrix(May);
    transform: matrix(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(June);
    -ms-transform: matrix(June);
    transform: matrix(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(April);
    -ms-transform: matrix(April);
    transform: matrix(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix(November);
    -ms-transform: matrix(November);
    transform: matrix(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(May);
    -ms-transform: matrix(May);
    transform: matrix(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(June);
    -ms-transform: matrix(June);
    transform: matrix(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix(April);
    -ms-transform: matrix(April);
    transform: matrix(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix(November);
    -ms-transform: matrix(November);
    transform: matrix(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: matrix(July);
    -ms-transform: matrix(July);
    transform: matrix(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(August);
    -ms-transform: matrix(August);
    transform: matrix(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix(September);
    -ms-transform: matrix(September);
    transform: matrix(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(November);
    -ms-transform: matrix(November);
    transform: matrix(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix(August);
    -ms-transform: matrix(August);
    transform: matrix(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: matrix(July);
    -ms-transform: matrix(July);
    transform: matrix(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(August);
    -ms-transform: matrix(August);
    transform: matrix(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix(September);
    -ms-transform: matrix(September);
    transform: matrix(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(November);
    -ms-transform: matrix(November);
    transform: matrix(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix(August);
    -ms-transform: matrix(August);
    transform: matrix(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: matrix(January);
    -ms-transform: matrix(January);
    transform: matrix(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(December);
    -ms-transform: matrix(December);
    transform: matrix(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix(April);
    -ms-transform: matrix(April);
    transform: matrix(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(May);
    -ms-transform: matrix(May);
    transform: matrix(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix(June);
    -ms-transform: matrix(June);
    transform: matrix(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: matrix(January);
    -ms-transform: matrix(January);
    transform: matrix(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(December);
    -ms-transform: matrix(December);
    transform: matrix(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix(April);
    -ms-transform: matrix(April);
    transform: matrix(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix(May);
    -ms-transform: matrix(May);
    transform: matrix(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix(June);
    -ms-transform: matrix(June);
    transform: matrix(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(54881);
  -ms-transform: matrix(54881);
  transform: matrix(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(54881);
  -ms-transform: matrix(54881);
  transform: matrix(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(42365);
  -ms-transform: matrix(42365);
  transform: matrix(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(42365);
  -ms-transform: matrix(42365);
  transform: matrix(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(July);
  -ms-transform: matrix(July);
  transform: matrix(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(July);
  -ms-transform: matrix(July);
  transform: matrix(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(June);
  -ms-transform: matrix(June);
  transform: matrix(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(June);
  -ms-transform: matrix(June);
  transform: matrix(June);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix(DarkSlateBlue);
  -ms-transform: matrix(DarkSlateBlue);
  transform: matrix(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(DarkSlateBlue);
  -ms-transform: matrix(DarkSlateBlue);
  transform: matrix(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(DarkSlateBlue);
  -ms-transform: matrix(DarkSlateBlue);
  transform: matrix(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix(DarkSlateBlue);
  -ms-transform: matrix(DarkSlateBlue);
  transform: matrix(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
